crates/toml/tests/snapshots/invalid/control/rawstring-cr.stderr
TOML parse error at line 1, column 23
  |
1 | rawstring-cr   = 'null
'
  |                       ^
invalid literal string, expected non-single-quote visible characters
